--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/adhranjan/simple-firebase#readme",
   "dependencies": {
     "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
     "firebase-admin": "^8.6.1",
     "q": "^1.5.1"
   }
