--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/adhranjan/simple-firebase#readme",
   "dependencies": {
+    "camelcase": "^5.3.1",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "firebase-admin": "^8.6.1",
